--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,5 +1,7 @@
 .container {
   display: flex;
+  justify-content: space-evenly;
+  padding: 0.3rem 0.1rem;
   gap: 0.2rem;
   flex-wrap: wrap;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
