--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,8 @@
 .header {
-  background-color: goldenrod;
-  padding: 0.5rem 0.2rem;
-}
-.header h1 {
-  color: #fff;
-  text-align: center;
+  padding: 0.7rem 0.2rem;
+  background-image: url("../../assets/banner.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 140px;
 }
