--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,8 +1,15 @@
 .container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   padding: 0.3rem 0.1rem;
   gap: 0.2rem;
   flex-wrap: wrap;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    justify-content: space-evenly;
+    gap: 0.5rem;
+  }
 }
