--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -6,18 +6,20 @@
   align-items: center;
   padding: 1rem 2rem;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  background-color: #eee;
 }
 .max {
-  color: #777;
+  color: #444;
   font-weight: bold;
   display: inline-block;
 }
 .min {
-  color: #aaa;
+  color: #666;
   display: inline-block;
 }
 .date {
-  color: #abc;
+  color: #555;
+  font-size: 1.2rem;
 }
 .degrees {
   display: flex;
