--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,8 +4,8 @@
   /* box-sizing: border-box; */
 }
 
-body {
+/* body {
   background-image: url("./assets/background.jpg");
   background-position: center;
   background-repeat: no-repeat;
-}
+} */
